tests/lean/inductive_cmd_leftover_placeholder_universe.lean
inductive ValueEffect (V : Type) (R : Type → Type) : Type
| Value : V → ValueEffect
| Effect : R (ValueEffect) → ValueEffect
